force-app/main/default/objects/EmailMessage/fields/IsRead__c.field-meta.xml
<CustomField>
    <fullName>IsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the email has been read by the user. Used for email inbox read status persistence.</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>