force-app/main/default/objects/EmailMessage/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pin</label>
    <type>Checkbox</type>
</CustomField>